add bean validators